--- a/index.html
+++ b/index.html
@@ -12,115 +12,122 @@
       integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="vanilla-weather-app/src/style.css" />
+<link rel="stylesheet" href="src/style.css">
   </head>
   <body>
-    <div class="container">
-      <div class="weather">
-        <form action="">
-          <div class="row">
-            <div class="col-9">
-              <input
-                type="search"
-                placeholder="Enter a city.."
-                class="form-control search-input"
-              />
+    <div class="app">
+      <div class="container">
+        <div class="weather">
+       <a href="#" target="_blank" rel="noopener noreferrer" class="logo"><img src="images/logo.jpg" alt="logo"></a>
+         <div class="search-form">
+          <form action="">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Enter a city.."
+                  class="form-control search-input"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  class="btn btn-primary w-100 btn-search"
+                  value="Search"
+                />
+              </div>
+              </div>
             </div>
-            <div class="col-3">
-              <input
-                type="submit"
-                class="btn btnprimary w-100"
-                value="Search"
-              />
-            </div>
-          </div>
-        </form>
-        <div class="weatherInfo">
-          <div class="row">
-            <div class="col-6">
-              <h1>City</h1>
-              <ul>
-                <li>
-                  <span> Thursday 19 : 29 </span>
-                  ,  scattered clouds
-                </li>
-                <li>
-                  Humidity: 
-                  <strong>78 % </strong>
+          </form>
+          <div class="weatherInfo">
+            <div class="row">
+              <div class="col-6">
+                <h1>City</h1>
+                <ul>
+                  <li>
+                    <span> Thursday 19:29</span>
+                    , scattered clouds
+                  </li>
+                  <li>
+                    Humidity:
+                    <strong>78 %</strong>
                   , Wind:
-                  <strong> 2.24 km/h </strong>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-8">
-              <div class="temperature-container d-flex justify-content-end">
-                <canvas width="" 52 height="" 52></canvas>
-                <div>
-                  <span class="temperature">10</span>
-                  <span class="unit">°C</span>
+                    <strong>2.24 km/h</strong>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-8">
+                <div class="temperature-container d-flex justify-content-end">
+                  <canvas width="" 52 height="" 52></canvas>
+                  <div>
+                    <span class="temperature">10</span>
+                    <span class="unit">°C</span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <div class="weatherForecest row">
+            <div class="col">
+              <div class="weatherForecastPreview">
+                <div class="forecast-time">Tue</div>
+                <canvas width="38" height="38"></canvas>
+                <div class="forecast-temperature">
+                  <span class="forecast-temperature-max">12°</span>
+                  <span class="forecast-temperature-min">7°</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="weatherForecastPreview">
+                <div class="forecast-time">Wed</div>
+                <canvas width="38" height="38"></canvas>
+                <div class="forecast-temperature">
+                  <span class="forecast-temperature-max">12°</span>
+                  <span class="forecast-temperature-min">7°</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="weatherForecastPreview">
+                <div class="forecast-time">Thu</div>
+                <canvas width="38" height="38"></canvas>
+                <div class="forecast-temperature">
+                  <span class="forecast-temperature-max">12°</span>
+                  <span class="forecast-temperature-min">7°</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="weatherForecastPreview">
+                <div class="forecast-time">Fri</div>
+                <canvas width="38" height="38"></canvas>
+                <div class="forecast-temperature">
+                  <span class="forecast-temperature-max">12°</span>
+                  <span class="forecast-temperature-min">7°</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="weatherForecastPreview">
+                <div class="forecast-time">Sat</div>
+                <canvas width="38" height="38"></canvas>
+                <div class="forecast-temperature">
+                  <span class="forecast-temperature-max">12°</span>
+                  <span class="forecast-temperature-min">7°</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <footer>
+            This project was coded by <a href="#">Monika Lauko</a> and is
+            <a href="#">open-sourced on GitHub</a> and
+            <a href="#">hosted on Netlify</a>
+          </footer>
         </div>
-        <div class="weatherForecest row">
-          <div class="col">
-            <div class="weatherForecastPreview">
-              <div class="forecast-time">Tue</div>
-              <canvas width="38" height="38"></canvas>
-              <div class="forecast-temperature">
-                <span class="forecast-temperature-max">12°</span>
-                <span class="forecast-temperature-min">7°</span>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="weatherForecastPreview">
-              <div class="forecast-time">Wed</div>
-              <canvas width="38" height="38"></canvas>
-              <div class="forecast-temperature">
-                <span class="forecast-temperature-max">12°</span>
-                <span class="forecast-temperature-min">7°</span>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="weatherForecastPreview">
-              <div class="forecast-time">Thu</div>
-              <canvas width="38" height="38"></canvas>
-              <div class="forecast-temperature">
-                <span class="forecast-temperature-max">12°</span>
-                <span class="forecast-temperature-min">7°</span>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="weatherForecastPreview">
-              <div class="forecast-time">Fri</div>
-              <canvas width="38" height="38"></canvas>
-              <div class="forecast-temperature">
-                <span class="forecast-temperature-max">12°</span>
-                <span class="forecast-temperature-min">7°</span>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="weatherForecastPreview">
-              <div class="forecast-time">Sat</div>
-              <canvas width="38" height="38"></canvas>
-              <div class="forecast-temperature">
-                <span class="forecast-temperature-max">12°</span>
-                <span class="forecast-temperature-min">7°</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <footer>
-          This project was coded by <a href="#">Monika Lauko</a> and is <a href="#">open-sourced on GitHub</a> and <a href="#">hosted on Netlify</a>
-        </footer>
       </div>
     </div>
-    <script src="vanilla-weather-app/src/app.js"></script>
+    <script src="src/app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
