--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul>
                   <li>
                     <span> Thursday 19:29</span>
-                    , scattered clouds
+                  , scattered clouds
                   </li>
                   <li>
                     Humidity:
@@ -121,8 +121,8 @@
           </div>
           <footer>
             This project was coded by <a href="#">Monika Lauko</a> and is
-            <a href="#">open-sourced on GitHub</a> and
-            <a href="#">hosted on Netlify</a>
+            <a href="https://github.com/lamoncso/vanilla-weather-app">open-sourced on GitHub</a> and
+            <a href="https://app.netlify.com">hosted on Netlify</a>
           </footer>
         </div>
       </div>
