--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
 <link rel="stylesheet" href="src/style.css">
+<script src="https://kit.fontawesome.com/8291fbbd8a.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="app">
@@ -27,12 +28,14 @@
                   type="search"
                   placeholder="Enter a city.."
                   class="form-control search-input"
+                  id="search-input"
                 />
               </div>
               <div class="col-3">
                 <input
                   type="submit"
                   class="btn btn-primary w-100 btn-search"
+                  id="btn-search"
                   value="Search"
                 />
               </div>
@@ -45,11 +48,10 @@
                 <h1>City</h1>
                 <ul>
                   <li>
-                    <span> Thursday 19:29</span>
-                  , scattered clouds
+                    <span id="today">Thursday</span> <span id="time">19:29</span>, scattered clouds
                   </li>
                   <li>
-                    Humidity:
+                  Humidity:
                     <strong>78 %</strong>
                   , Wind:
                     <strong>2.24 km/h</strong>
@@ -57,7 +59,8 @@
                 </ul>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-8">
-                <div class="temperature-container d-flex justify-content-end">
+                <div class="temperature-container d-flex justify">
+                  <i class="fa-solid fa-cloud weather-img-head"></i>
                   <canvas width="" 52 height="" 52></canvas>
                   <div>
                     <span class="temperature">10</span>
@@ -71,7 +74,8 @@
             <div class="col">
               <div class="weatherForecastPreview">
                 <div class="forecast-time">Tue</div>
-                <canvas width="38" height="38"></canvas>
+               <i class="fa-solid fa-cloud weather-img "></i>
+               <canvas width="38" height="38"></canvas>
                 <div class="forecast-temperature">
                   <span class="forecast-temperature-max">12°</span>
                   <span class="forecast-temperature-min">7°</span>
@@ -81,6 +85,7 @@
             <div class="col">
               <div class="weatherForecastPreview">
                 <div class="forecast-time">Wed</div>
+                <i class="fa-solid fa-cloud weather-img"></i>
                 <canvas width="38" height="38"></canvas>
                 <div class="forecast-temperature">
                   <span class="forecast-temperature-max">12°</span>
@@ -91,6 +96,7 @@
             <div class="col">
               <div class="weatherForecastPreview">
                 <div class="forecast-time">Thu</div>
+                <i class="fa-solid fa-cloud weather-img"></i>
                 <canvas width="38" height="38"></canvas>
                 <div class="forecast-temperature">
                   <span class="forecast-temperature-max">12°</span>
@@ -101,6 +107,7 @@
             <div class="col">
               <div class="weatherForecastPreview">
                 <div class="forecast-time">Fri</div>
+                <i class="fa-solid fa-cloud weather-img"></i>
                 <canvas width="38" height="38"></canvas>
                 <div class="forecast-temperature">
                   <span class="forecast-temperature-max">12°</span>
@@ -111,6 +118,7 @@
             <div class="col">
               <div class="weatherForecastPreview">
                 <div class="forecast-time">Sat</div>
+                <i class="fa-solid fa-cloud weather-img"></i>
                 <canvas width="38" height="38"></canvas>
                 <div class="forecast-temperature">
                   <span class="forecast-temperature-max">12°</span>
@@ -120,9 +128,9 @@
             </div>
           </div>
           <footer>
-            This project was coded by <a href="#">Monika Lauko</a> and is
-            <a href="https://github.com/lamoncso/vanilla-weather-app">open-sourced on GitHub</a> and
-            <a href="https://app.netlify.com">hosted on Netlify</a>
+            This project was coded by <a href="#" target="_blank">Monika Lauko</a> and is
+            <a href="https://github.com/lamoncso/vanilla-weather-app" target="_blank">open-sourced on GitHub</a> and
+            <a href="https://app.netlify.com" target="_blank">hosted on Netlify</a>
           </footer>
         </div>
       </div>
