--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 <link rel="stylesheet" href="src/style.css">
 <script src="https://kit.fontawesome.com/8291fbbd8a.js" crossorigin="anonymous"></script>
   </head>
@@ -45,26 +46,26 @@
           <div class="weatherInfo">
             <div class="row">
               <div class="col-6">
-                <h1>City</h1>
+                <h1 id="city"></h1>
                 <ul>
                   <li>
-                    <span id="today">Thursday</span> <span id="time">19:29</span>, scattered clouds
+                    <span id="today">Thursday</span> <span id="current-time">19:29</span>, <span id="description"></span>
                   </li>
                   <li>
                   Humidity:
-                    <strong>78 %</strong>
-                  , Wind:
-                    <strong>2.24 km/h</strong>
+                    <strong id="humidity"></strong> <span class="unitHumidity"> %</span><span>, 
+               Wind:</span>
+                    <strong id="wind"></strong><span class="unitWind"> km/h</span>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-8">
-                <div class="temperature-container d-flex justify">
+                <div class="temperature-container d-flex">
                   <i class="fa-solid fa-cloud weather-img-head"></i>
                   <canvas width="" 52 height="" 52></canvas>
                   <div>
-                    <span class="temperature">10</span>
-                    <span class="unit">°C</span>
+                    <span class="temperature" id="temperature"></span>
+                    <span class="unit" id="unit">°C</span>
                   </div>
                 </div>
               </div>
