--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 <h1 id="city"></h1>
                 <ul>
                   <li>
-                    <span id="today">Thursday</span> <span id="current-time">19:29</span>, <span id="description"></span>
+                    <span id="today">Thursday</span> <span id="current-time">19:29</span><br>
+                    <span id="description"></span>
                   </li>
                   <li>
                   Humidity:
