Set icon img to live

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
               </div>
               <div class="col-lg-6 col-md-6 col-sm-8">
                 <div class="temperature-container d-flex">
-                  <i class="fa-solid fa-cloud weather-img-head"></i>
-                  <canvas width="" 52 height="" 52></canvas>
+                  <img src="" class="weather-img-head" id="icon"
+                  alt="current-weather-icon"/>
+                  <canvas width="52" height="52"></canvas>
                   <div>
                     <span class="temperature" id="temperature"></span>
                     <span class="unit" id="unit">°C</span>
