--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="weather">
        <a href="#" target="_blank" rel="noopener noreferrer" class="logo"><img src="images/logo.jpg" alt="logo"></a>
          <div class="search-form">
-          <form action="">
+          <form id="search-form">
             <div class="row">
               <div class="col-9">
                 <input
@@ -30,6 +30,7 @@
                   placeholder="Enter a city.."
                   class="form-control search-input"
                   id="search-input"
+                  autocomplete="off"
                 />
               </div>
               <div class="col-3">
