--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
           </div>
           <footer>
-            This project was coded by <a href="#" target="_blank">Monika Lauko</a> and is
+            This project was coded by <a href="#" target="_blank">Monika Lauko</a><br/>and is
             <a href="https://github.com/lamoncso/vanilla-weather-app" target="_blank">open-sourced on GitHub</a> and
             <a href="https://app.netlify.com" target="_blank">hosted on Netlify</a>
           </footer>
