Weather forecast HTML structure injected in JS

--- a/index.html
+++ b/index.html
@@ -75,63 +75,8 @@
               </div>
             </div>
           </div>
-          <div class="weatherForecest row">
-            <div class="col">
-              <div class="weatherForecastPreview">
-                <div class="forecast-time">Tue</div>
-               <i class="fa-solid fa-cloud weather-img "></i>
-               <canvas width="38" height="38"></canvas>
-                <div class="forecast-temperature">
-                  <span class="forecast-temperature-max">12°</span>
-                  <span class="forecast-temperature-min">7°</span>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="weatherForecastPreview">
-                <div class="forecast-time">Wed</div>
-                <i class="fa-solid fa-cloud weather-img"></i>
-                <canvas width="38" height="38"></canvas>
-                <div class="forecast-temperature">
-                  <span class="forecast-temperature-max">12°</span>
-                  <span class="forecast-temperature-min">7°</span>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="weatherForecastPreview">
-                <div class="forecast-time">Thu</div>
-                <i class="fa-solid fa-cloud weather-img"></i>
-                <canvas width="38" height="38"></canvas>
-                <div class="forecast-temperature">
-                  <span class="forecast-temperature-max">12°</span>
-                  <span class="forecast-temperature-min">7°</span>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="weatherForecastPreview">
-                <div class="forecast-time">Fri</div>
-                <i class="fa-solid fa-cloud weather-img"></i>
-                <canvas width="38" height="38"></canvas>
-                <div class="forecast-temperature">
-                  <span class="forecast-temperature-max">12°</span>
-                  <span class="forecast-temperature-min">7°</span>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="weatherForecastPreview">
-                <div class="forecast-time">Sat</div>
-                <i class="fa-solid fa-cloud weather-img"></i>
-                <canvas width="38" height="38"></canvas>
-                <div class="forecast-temperature">
-                  <span class="forecast-temperature-max">12°</span>
-                  <span class="forecast-temperature-min">7°</span>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="weatherForecast" id="weatherForecast">
+          </div>      
           <footer>
             This project was coded by <a href="#" target="_blank">Monika Lauko</a><br/>and is
             <a href="https://github.com/lamoncso/vanilla-weather-app" target="_blank">open-sourced on GitHub</a> and
