Broken img of current temperature is fixed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <style>
+  @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Cutive+Mono&family=Petit+Formal+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Reenie+Beanie&family=Tilt+Prism&display=swap');
+</style>
 <link rel="stylesheet" href="src/style.css">
 <script src="https://kit.fontawesome.com/8291fbbd8a.js" crossorigin="anonymous"></script>
   </head>
