Remove fahrenheit unit conversion.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                   <canvas width="52" height="52"></canvas>
           
                     <span class="temperature" id="temperature"></span>
-                    <span class="unit" id="unit"><a href="#" class="active" id="celsius">°C</a></span><span class="unit">/</span>
-                    <span class="unit" ><a href="#"  id="fahrenheit">°F</a></span>
+                    <span class="unit" id="celsius">°C</span>
 
                 </div>
               </div>
