--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <canvas width="52" height="52"></canvas>
 
                   <span class="temperature mt-3" id="temperature"></span>
-                  <span class="unit" id="celsius">°C</span>
+                  <span class="unit mt-3" id="celsius">°C</span>
                 </div>
               </div>
             </div>
