Test broken icon on mobile device
Correcting img closing tag

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </form>
           <div class="weatherInfo mt-3 container-fluid">
             <div class="row">
-              <div class="col-sm-5">
+              <div class="col-sm-7">
                 <h1 id="city"></h1>
                 <ul>
                   <li>
@@ -75,16 +75,14 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-sm-7">
+              <div class="col-sm-5">
                 <div class="temperature-container d-flex">
                   <img
                     src=""
                     class="weather-img-head"
                     id="icon"
                     alt="current-weather-icon"
-                  />
-                  <canvas width="52" height="52"></canvas>
-
+                  ></img>
                   <span class="temperature mt-3" id="temperature"></span>
                   <span class="unit mt-3" id="celsius">°C</span>
                 </div>
