--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     <div class="app">
       <div class="container">
         <div class="weather">
-          <a href="#" target="_blank" rel="noopener noreferrer" class="logo"
-            ><img src="images/logo.jpg" alt="logo"
-          /></a>
+          <img src="images/logo.jpg" alt="logo" class="logo img-fluid" 
+          />
           <form id="search-form">
             <div class="search-form container-fluid">
               <div class="row">
